jupyters deteccion de picos(imagenes y timeseries)

--- a/Acceso a base de datos JSOC usando la librería Sunpy.ipynb
+++ b/Acceso a base de datos JSOC usando la librería Sunpy.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "A continucación, se procederá a realizar la busqueda y descarga de los archivos FITS correspondientes a un curioso evento solar ocurrido el 07 de junio de 2011. \n",
     "\n",
-    "Primeramente se utiliza el módulo TimeRange de sunpy.time para establecer un rango de tiempo deseado. Se definirá la variable \"tr\" que corresponderá al rango de 05:30am a 08:00am, horas donde se tenía una importante actividad en el sol.\n",
+    "Primeramente se utiliza el módulo TimeRange de sunpy.time para establecer un rango de tiempo deseado. Se definirá la variable \"tr\" que corresponderá al rango de 05:30am a 08:00am, horas donde se tenía una importante actividad solar.\n",
     "\n",
     "Se realiza la busqueda usando la función search() del módulo Fido, sin embargo, se especifica que la busqueda corresponde a la base de datos JSOC dentro de los parámetros que recibe dicha función. A continuación se detallan los parámetros de busqueda utilizados:\n",
     "\n",
@@ -107,7 +107,7 @@
      "data": {
       "text/html": [
        "Results from 1 Provider:</br></br>10 Results from the JSOCClient:</br>&lt;Table length=10&gt;\n",
-       "<table id=\"table140398801310608\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139619412337552\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>T_REC</th><th>TELESCOP</th><th>INSTRUME</th><th>WAVELNTH</th><th>CAR_ROT</th></tr></thead>\n",
        "<thead><tr><th>unicode20</th><th>unicode7</th><th>unicode5</th><th>int64</th><th>int64</th></tr></thead>\n",
        "<tr><td>2011-06-07T05:30:02Z</td><td>SDO/AIA</td><td>AIA_3</td><td>171</td><td>2111</td></tr>\n",
@@ -123,7 +123,7 @@
        "</table></br>"
       ],
       "text/plain": [
-       "<sunpy.net.fido_factory.UnifiedResponse object at 0x7fb1254342d0>\n",
+       "<sunpy.net.fido_factory.UnifiedResponse object at 0x7efbae0f62d0>\n",
        "Results from 1 Provider:\n",
        "\n",
        "10 Results from the JSOCClient:\n",
@@ -165,16 +165,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Export request pending. [id=\"JSOC_20181015_009\", status=2]\n",
+      "Export request pending. [id=\"JSOC_20181022_050\", status=2]\n",
       "Waiting for 0 seconds...\n",
-      "20 URLs found for download. Full request totalling 116MB\n",
+      "Request not found on server, 5 retries left.\n",
+      "Export request pending. [id=\"JSOC_20181022_050\", status=6]\n",
+      "Waiting for 5 seconds...\n",
+      "Request not found on server, 4 retries left.\n",
+      "Export request pending. [id=\"JSOC_20181022_050\", status=6]\n",
+      "Waiting for 5 seconds...\n",
+      "Export request pending. [id=\"JSOC_20181022_050\", status=1]\n",
+      "Waiting for 5 seconds...\n",
+      "Export request pending. [id=\"JSOC_20181022_050\", status=1]\n",
+      "Waiting for 5 seconds...\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T053013Z.171.image_lev1.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T053013Z.171.spikes.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T054513Z.171.image_lev1.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T054513Z.171.spikes.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T060013Z.171.image_lev1.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T060013Z.171.spikes.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T061513Z.171.image_lev1.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T061513Z.171.spikes.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T064513Z.171.image_lev1.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T064513Z.171.spikes.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T070014Z.171.image_lev1.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T070014Z.171.spikes.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T071513Z.171.image_lev1.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T071513Z.171.spikes.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T073014Z.171.image_lev1.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T073014Z.171.spikes.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T074513Z.171.image_lev1.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T074513Z.171.spikes.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T080013Z.171.image_lev1.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
+      "Skipping download of file aia.lev1_euv_12s.2011-06-07T080013Z.171.spikes.fits as it has already been downloaded. If you want to redownload the data, please set overwrite to True\n",
       "[                                        ========================================\n"
      ]
     }
@@ -194,21 +223,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "Results from 1 Provider:</br></br>1 Results from the XRSClient:</br>&lt;Table length=1&gt;\n",
-       "<table id=\"table140398801358032\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139619412964496\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>Start Time</th><th>End Time</th><th>Source</th><th>Instrument</th><th>Wavelength</th></tr></thead>\n",
        "<thead><tr><th>str19</th><th>str19</th><th>str4</th><th>str4</th><th>str3</th></tr></thead>\n",
        "<tr><td>2011-06-07 00:00:00</td><td>2011-06-07 23:59:59</td><td>nasa</td><td>goes</td><td>nan</td></tr>\n",
        "</table></br>"
       ],
       "text/plain": [
-       "<sunpy.net.fido_factory.UnifiedResponse object at 0x7fb124ae8510>\n",
+       "<sunpy.net.fido_factory.UnifiedResponse object at 0x7efbc1404490>\n",
        "Results from 1 Provider:\n",
        "\n",
        "1 Results from the XRSClient:\n",
@@ -218,7 +247,7 @@
        "2011-06-07 00:00:00 2011-06-07 23:59:59   nasa       goes        nan\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,15 +266,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[                                        ========================================\n",
-      "['/home/yasser/Documents/HorasAsistenteB7088/go1520110607.fits']\n"
+      "['/home/yasser/Documents/HorasAsistenteB7088/go1520110607.1.fits']\n"
      ]
     },
     {
@@ -271,7 +302,43 @@
     "filesXRS = Fido.fetch(resultsXRS, path='/home/yasser/Documents/HorasAsistenteB7088')\n",
     "print(filesXRS)\n",
     "goes = TimeSeries(filesXRS, source='XRS')\n",
-    "goes.peek()"
+    "goes.peek()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "|-------------------------------------------------------------------------------------------------|\n",
+       "|TimeRange                  | Columns         | Meta                                              |\n",
+       "|-------------------------------------------------------------------------------------------------|\n",
+       "|2011-06-06 23:59:59.961999 | xrsa            | simple: True                                      |\n",
+       "|            to             | xrsb            | bitpix: 8                                         |\n",
+       "|2011-06-07 23:59:57.631999 |                 | naxis: 0                                          |\n",
+       "|                           |                 | extend: True                                      |\n",
+       "|                           |                 | date: 26/06/2012                                  |\n",
+       "|                           |                 | numext: 3                                         |\n",
+       "|                           |                 | telescop: GOES 15                                 |\n",
+       "|                           |                 | instrume: X-ray Detector                          |\n",
+       "|                           |                 | object: Sun                                       |\n",
+       "|                           |                 | origin: SDAC/GSFC                                 |\n",
+       "|                           |                 | ...                                               |\n",
+       "|-------------------------------------------------------------------------------------------------|"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goes.meta"
    ]
   },
   {
